--- a/0x04-React_component/task_0/dashboard/package.json
+++ b/0x04-React_component/task_0/dashboard/package.json
@@ -32,7 +32,8 @@
     },
     "dependencies": {
       "react": "^17.0.1",
-      "react-dom": "^17.0.1"
+      "react-dom": "^17.0.1",
+      "prop-types": "^15.7.2",
     },
     "jest": {
       "setupFiles": [
